[releng] update master job
Change-Id: I2c592c8d86305e7d4d40b645ca3e0c3efd00996a