@@ -82,6 +82,9 @@ This file was generated by Eclipse EGF
     <condition property="docgen.addon.location" value="${env.docgen.addon.location}">
         <isset property="env.docgen.addon.location" />
     </condition>
+    <condition property="amalgam.repo.url" value="${env.amalgam.repo.url}">
+        <isset property="env.amalgam.repo.url" />
+    </condition>
     <condition property="eclipse_version" value="${env.eclipse_version}">
         <isset property="env.eclipse_version" />
     </condition>
@@ -151,6 +154,7 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dcapella.repo.url=${capella.repo.url}"/>
 	                <jvmarg value="-Dcapella.egf.repo.url=${capella.egf.repo.url}"/>
 	                <jvmarg value="-Ddocgen.addon.location=${docgen.addon.location}"/>
+	                <jvmarg value="-Damalgam.repo.url=${amalgam.repo.url}"/>
 	                <jvmarg value="-Declipse_version=${eclipse_version}"/>
 	                <jvmarg value="-Dstudio_version=${studio_version}"/>
 	                <jvmarg value="-Ddocgen.addon_version=${docgen.addon_version}"/>
@@ -202,7 +206,9 @@ This file was generated by Eclipse EGF
                 <arg value="-i" />
                 <arg value="org.eclipse.buckminster.pde.headless.feature.feature.group" />
                 <arg value="-i" />
-                <arg value="org.eclipse.buckminster.emma.headless.feature.feature.group" />
+                <arg value="org.eclipse.buckminster.cvs.headless.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.buckminster.git.headless.feature.feature.group" />
             </args>
         </eclipse.launch>
     </target>
@@ -260,7 +266,6 @@ This file was generated by Eclipse EGF
         </sequential>
     </macrodef>
 	<macrodef name="egf">
-        <attribute name="workspace" default="${workspace}" />
         <element name="activities" />
         <element name="globargs" optional="true" />
         <element name="cmdargs" optional="true" />
@@ -270,17 +275,15 @@ This file was generated by Eclipse EGF
                     <arg value="-application" />
                     <arg value="org.eclipse.egf.application.activity" />
                     <arg value="-consoleLog" />
-                    <arg value="-data" />
-                    <arg value="@{workspace}" />
                     <globargs />
-                    <arg value="-runtime" />
                     <arg value="-activities" />
                     <activities />
                     <cmdargs />
                 </args>
             </eclipse.launch>
         </sequential>
-    </macrodef>	<macrodef name="anteclipse">
+    </macrodef>
+	<macrodef name="anteclipse">
         <attribute name="buildfile" default="${relengDir}/build.xml" />
         <attribute name="target" />
         <element name="globargs" optional="true" />
@@ -342,6 +345,7 @@ This file was generated by Eclipse EGF
 		<echo message="Provided $${capella.repo.url} : ${capella.repo.url}" />
 		<echo message="Provided $${capella.egf.repo.url} : ${capella.egf.repo.url}" />
 		<echo message="Provided $${docgen.addon.location} : ${docgen.addon.location}" />
+		<echo message="Provided $${amalgam.repo.url} : ${amalgam.repo.url}" />
 		<echo message="Provided $${eclipse_version} : ${eclipse_version}" />
 		<echo message="Provided $${studio_version} : ${studio_version}" />
 		<echo message="Provided $${docgen.addon_version} : ${docgen.addon_version}" />
@@ -370,12 +374,12 @@ This file was generated by Eclipse EGF
 	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,product,PublishStep_8,product_feature,extension_sdk,PublishStep_11,extension_sdk_feature,vpdsl,PublishStep_14,vpdsl_feature,AntStep_16,all_studio_features,TP_win32-win32-x86,AntStep_19" />
 	<target name="TP_juno" depends="TP_juno_build_studio_platform" />
 	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features,TP_juno_build_studio_platform_install_docgen_addon" />
-	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2" />
+	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_sirius_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2,TP_juno_build_studio_platform_setup_platform_install_amalgam_features" />
 	<target name="TP_juno_build_studio_platform_install_docgen_addon" depends="TP_juno_build_studio_platform_install_docgen_addon_AntStep_1,TP_juno_build_studio_platform_install_docgen_addon_UnzipStep_2,TP_juno_build_studio_platform_install_docgen_addon_install_docgen_addon_features" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build,TP_build_install_kitalpha_releng_TP_build" />
 	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_build_studio_platform,TP_win32-win32-x86_install_studio,TP_win32-win32-x86_EgfStep_3,TP_win32-win32-x86_zip_juno_results" />
 	<target name="TP_win32-win32-x86_build_studio_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform,TP_win32-win32-x86_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_build_studio_platform_install_capella_features,TP_win32-win32-x86_build_studio_platform_install_capella_egf_features,TP_win32-win32-x86_build_studio_platform_install_docgen_addon" />
-	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86,TP_win32-win32-x86_build_studio_platform_setup_platform_install_cots_features,TP_win32-win32-x86_build_studio_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_build_studio_platform_setup_platform_install_ecoretools2" />
+	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86,TP_win32-win32-x86_build_studio_platform_setup_platform_install_cots_features,TP_win32-win32-x86_build_studio_platform_setup_platform_install_sirius_features,TP_win32-win32-x86_build_studio_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_build_studio_platform_setup_platform_install_ecoretools2,TP_win32-win32-x86_build_studio_platform_setup_platform_install_amalgam_features" />
 	<target name="TP_win32-win32-x86_build_studio_platform_install_docgen_addon" depends="TP_win32-win32-x86_build_studio_platform_install_docgen_addon_AntStep_1,TP_win32-win32-x86_build_studio_platform_install_docgen_addon_UnzipStep_2,TP_win32-win32-x86_build_studio_platform_install_docgen_addon_install_docgen_addon_features" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -793,10 +797,6 @@ This file was generated by Eclipse EGF
                 <arg value="-r" />
                 <arg value="${egf.repo.url}" />
                 <arg value="-r" />
-                <arg value="${sirius.repo.url}" />
-                <arg value="-r" />
-                <arg value="${orbit.repo.url}" />
-                <arg value="-r" />
                 <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
                 <arg value="-r" />
                 <arg value="${eef.repo.url}" />
@@ -820,6 +820,46 @@ This file was generated by Eclipse EGF
                 <arg value="org.eclipse.xsd.sdk.feature.group" />
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.validation.ocl.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.gmf.sdk.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_juno_build_studio_platform_setup_platform_install_sirius_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+                <arg value="-r" />
+                <arg value="${orbit.repo.url}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.sirius.doc.feature.feature.group" />
                 <arg value="-i" />
@@ -941,6 +981,46 @@ This file was generated by Eclipse EGF
 
 
 
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_juno_build_studio_platform_setup_platform_install_amalgam_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${amalgam.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.eclipse.amalgam.explorer.activity.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.amalgam.explorer.contextual.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.amalgam.explorer.contextual.sirius.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
             </args>
         </eclipse.launch>
 	</target>	
@@ -1537,10 +1617,6 @@ This file was generated by Eclipse EGF
                 <arg value="-r" />
                 <arg value="${egf.repo.url}" />
                 <arg value="-r" />
-                <arg value="${sirius.repo.url}" />
-                <arg value="-r" />
-                <arg value="${orbit.repo.url}" />
-                <arg value="-r" />
                 <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
                 <arg value="-r" />
                 <arg value="${eef.repo.url}" />
@@ -1564,6 +1640,46 @@ This file was generated by Eclipse EGF
                 <arg value="org.eclipse.xsd.sdk.feature.group" />
                 <arg value="-i" />
                 <arg value="org.eclipse.emf.validation.ocl.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.gmf.sdk.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform_install_sirius_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${sirius.repo.url}" />
+                <arg value="-r" />
+                <arg value="${eclipse.download.prefix}/releases/${eclipse_version}" />
+                <arg value="-r" />
+                <arg value="${orbit.repo.url}" />
+
+
                 <arg value="-i" />
                 <arg value="org.eclipse.sirius.doc.feature.feature.group" />
                 <arg value="-i" />
@@ -1685,6 +1801,46 @@ This file was generated by Eclipse EGF
 
 
 
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform_install_amalgam_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${amalgam.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.eclipse.amalgam.explorer.activity.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.amalgam.explorer.contextual.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.amalgam.explorer.contextual.sirius.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
             </args>
         </eclipse.launch>
 	</target>	
